--- a/css/mobile768.css
+++ b/css/mobile768.css
@@ -9,8 +9,8 @@
 	html .tag #main article,
 	html .search #main article,
 	html .author #main article{
-    	width: 90%;
-		margin: 5%;
+    		width: 76%;
+		margin: 12%;
 	}
 	
 	html .home #main article .entry-header,
@@ -111,6 +111,18 @@
 		height: 90%;
 		width: 80%;
 		margin: 5% 10%;
+	}
+
+	html .home article .content-holder,
+	html .search article .content-holder,
+	html .archive article .content-holder{
+		border : none;
+	}
+
+	html .home article.content_preview .content-holder, 
+	html .search article.content_preview .content-holder, 
+	html .archive article.content_preview .content-holder {
+		width: 90%;
 	}
 	
 }
